# agent_eval

./: .gitignore  LICENSE  Makefile  README.md
backend/: pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/api/: datasets.py  leaderboard.py  models.py  runs.py
backend/app/evaluation/: api_interaction.py  base.py  custom.py  error_recovery.py  gsm8k.py  humaneval.py  instruction_following.py  mmlu.py  multi_step.py  react.py  registry.py  tool_use.py
backend/app/models/: __init__.py  dataset.py  evaluation_run.py  model_config.py  result.py  task.py
backend/app/schemas/: __init__.py  dataset.py  evaluation_run.py  leaderboard.py  model_config.py  result.py  run.py
backend/app/services/: dispatcher.py  llm_clients.py
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/api/: client.ts  datasets.ts  leaderboard.ts  models.ts  runs.ts
frontend/src/pages/: DashboardPage.tsx  DatasetDetailPage.tsx  DatasetsPage.tsx  LeaderboardPage.tsx  ModelsPage.tsx  NewRunPage.tsx  RunDetailPage.tsx  RunsListPage.tsx
frontend/src/types/: index.ts
